# dispatch-network

api/: .gitignore  pyproject.toml
api/ansible/: ansible.cfg
api/ansible/env/: extravars
api/ansible/inventory/: hosts  hosts.json
api/ansible/project/: get_config.yml  push_config.yml
api/app/: config.py  main.py
api/app/api/: main.py
api/app/api/routes/: chat.py  devices.py  topology.py
api/app/mcp/: server.py
api/app/models/: domain.py
api/app/services/: ansible.py  chat.py  devices.py  gns3.py  llm.py  topologies.py
api/app/utils/: db.py
api/configs/: R1.cfg  R2.cfg  r1.cfg  r2.cfg
api/database/: init.sql  postgresql-docker-compose.yml
client/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/src/: App.vue  style.css
client/src/components/: AddDeviceModal.vue  ChatPanel.vue  ConfigModal.vue  CreateTopologyModal.vue  DeleteChatModal.vue  DevicesListModal.vue  MessageContent.vue  RenameChatModal.vue  SetUserModal.vue
client/src/router/: index.js
client/src/services/: api.js
client/src/stores/: chat.js  topology.js
client/src/views/: TopologyDetail.vue  TopologyList.vue
